--- a/.github/workflows/collect.yaml
+++ b/.github/workflows/collect.yaml
@@ -1,8 +1,8 @@
 name: Collect
 on:
-  # executed once a week on Sundays at 00:00
+  # 每两小时执行一次
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 */2 * * *"
   workflow_dispatch:
 
 concurrency:
