--- a/.github/workflows/collect.yaml
+++ b/.github/workflows/collect.yaml
@@ -65,7 +65,7 @@ jobs:
           fi
 
       - name: Collect
-        run: python -u subscribe/collect.py -n 64 -p 10 --overwrite
+        run: python -u subscribe/collect.py -n 64 -p 10 --overwrite --all
 
       - name: Timestamp
         run: date
