--- a/.github/workflows/collect.yaml
+++ b/.github/workflows/collect.yaml
@@ -65,7 +65,7 @@ jobs:
           fi
 
       - name: Collect
-        run: python -u subscribe/collect.py -n 64 -p 10 --overwrite --all
+        run: python -u subscribe/collect.py -n 64 -p 10 -f 200 -l 48 -d 3000 --chuck -u https://clients3.google.com/generate_204 --overwrite --all
 
       - name: Timestamp
         run: date
